# visa-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  production_app.py  pyproject.toml  state.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agent_based_assistant/: ARCHITECTURE.md  __init__.py  main.py  production_app.py
agent_based_assistant/agent/: __init__.py  agent.py  prompts.py  state.py
agent_based_assistant/config/: settings.py
agent_based_assistant/tools/: __init__.py  application_basic.py  application_detailed.py  document_processing.py  greetings.py  session_management.py  visa_information.py  visa_type_analyzer.py
config/: settings.py  visa_types.py
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ChatMessage.tsx  FileUpload.tsx  TypingIndicator.tsx
frontend/lib/: api.ts  useVisaAgent.ts
graph/: builder.py
knowledge_base/vietnam/: visa_info.json
nodes/: base_information_collector.py  collection_resume.py  detailed_collector.py  docs_parser.py  general_enquiry.py  greetings.py  intent_analyzer.py  passport_processor.py  visa_application.py  visa_application_collector.py
utils/: file_manager.py  prompts.py
visa_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
